package com.heima.designpatterns.principles.openclose;

/**
 * @author: DongShaowei
 * @create: 2024-11-10 22:49
 * @description: 抽象皮肤类
 */
public abstract class AbstractSkin {

    /**
     * 用来显示的方法
     */
    public abstract void display();

}
