@startuml
'https://plantuml.com/class-diagram

abstract class AbstractSkin {
    + display(): void
}
class SouGouInput {
    - skin: AbstractSkin
    + display(): void
}
class DefaultSpecificSkin {
    + display(): void
}
class Win10SpecificSkin {
    + display(): void
}

AbstractSkin <|-down- DefaultSpecificSkin: inheritance
AbstractSkin <|-down- Win10SpecificSkin: inheritance
AbstractSkin -left-* SouGouInput:Composition

@enduml